# zenith

./: CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  server.json
examples/: README.md  (+8 more)
zenith-cli/: Cargo.toml  build.rs
zenith-cli/assets/libraries/: zenith-icons-lucide.zen
zenith-cli/assets/plugin-commands/: zenith-check.md  zenith-merge.md  zenith-new.md  zenith-render.md
zenith-cli/assets/skill/: SKILL.md
zenith-cli/assets/skill/references/: agentic-workflow.md  by-kind.md  color.md  diagnostics.md  icons.md  layout.md  recipes-model.md  recipes.md  theme-from-brand.md  themes.md  typography.md  variants.md
zenith-cli/assets/skill/themes/: cobalt.zen  ember.zen  harbor.zen  lagoon.zen  pine.zen  poppy.zen  prism.zen  sorbet.zen  sunset.zen  volt.zen
zenith-cli/src/: cli.rs  cli_helpers.rs  dispatch.rs  history.rs  json_types.rs  lib.rs  library.rs  main.rs
zenith-cli/src/cli/: asset.rs  library.rs  perceive.rs  render.rs  schema.rs  workspace.rs
zenith-cli/src/commands/: asset.rs  composition_imports.rs  inspect.rs  library.rs  merge.rs  mod.rs  new.rs  perceive.rs  render.rs  schema.rs  tx.rs  variant.rs
zenith-cli/src/commands/inspect/: document.rs  mod.rs  recipes.rs
zenith-cli/src/commands/new/: scaffold.rs
zenith-cli/src/commands/render/: assets.rs  entry.rs  pipeline.rs  tests.rs  text_source.rs
zenith-cli/src/commands/schema/: listings.rs  surfaces.rs  tests.rs
zenith-cli/src/commands/theme/: apply.rs
zenith-cli/src/commands/variant/: engine.rs  run.rs
zenith-cli/src/commands/workspace/: candidate.rs  finalize.rs  mod.rs  promote.rs  scratch.rs
zenith-cli/src/dispatch/: library.rs  render.rs  workspace.rs
zenith-cli/src/mcp/: base64.rs  doc_ref.rs  exec.rs  http.rs  mod.rs  protocol.rs  resources.rs  serialize.rs  tools.rs
zenith-cli/tests/: asset_zpx.rs  history_pipeline.rs  icon_render_equivalence.rs  library_search.rs  library_svg_dir.rs  mcp.rs  merge_pipeline.rs  new.rs  perceive.rs  render_integration.rs  theme_apply.rs  workspace.rs
zenith-core/: Cargo.toml
zenith-core/src/: color.rs  diag_catalog.rs  lib.rs  markdown.rs  schema.rs
zenith-core/src/ast/: agent_run.rs  asset.rs  block_style.rs  brand.rs  document.rs  kerning.rs  mod.rs  node.rs  provenance.rs  style.rs  token.rs  unsupported.rs  value.rs
zenith-core/src/ast/node/: common.rs  leaf.rs  mod.rs  special.rs
zenith-core/src/data/: format.rs  mod.rs
zenith-core/src/diag_catalog/: catalog.rs  codes_a.rs  codes_b.rs  codes_c.rs  entry.rs
zenith-core/src/font/: mod.rs  provider.rs
zenith-core/src/format/: writer.rs
zenith-core/src/format/writer/: mod.rs  nodes.rs  primitives.rs  tests.rs  tokens.rs
zenith-core/src/markdown/: inline.rs
zenith-core/src/parse/: kdl_adapter.rs  transform.rs
zenith-core/src/parse/transform/: block_style.rs  chart.rs  container.rs  document.rs  helpers.rs  kerning.rs  leaf.rs  mod.rs  node.rs  page.rs  pattern.rs  special.rs  tokens.rs  unsupported.rs
zenith-core/src/schema/: attributes.rs
zenith-core/src/theme/: mod.rs  synth.rs
zenith-core/src/tokens/resolve/: driver.rs  types.rs  validate.rs
zenith-core/src/validate/: check.rs
zenith-core/tests/: block_style.rs  format_agent_runs.rs  format_assets.rs  format_chart.rs  format_containers.rs  format_document.rs  format_nodes.rs  format_pattern.rs  format_roundtrip.rs  format_text.rs  format_tokens_styles.rs  token_resolve.rs  token_resolve_visual.rs  unsupported_children.rs  validate_anchors.rs  validate_assets.rs  validate_brand.rs  validate_chart.rs  validate_contrast.rs  validate_contrast_effects.rs  validate_data.rs  validate_geometry.rs  validate_layout.rs  validate_nodes.rs  validate_path.rs  validate_pattern.rs  validate_recipes.rs  validate_shapes.rs  validate_structure.rs  validate_styles.rs  validate_suggestions.rs
zenith-core/tests/common/: contrast.rs  mod.rs
zenith-layout/: Cargo.toml
zenith-layout/src/: engine.rs  glyph_outline.rs  lib.rs  ot_layout.rs  rustybuzz_engine.rs
zenith-perception/: Cargo.toml
zenith-perception/src/: clearspace.rs  density_map.rs  diagnostic.rs  edge_map.rs  grid_conformance.rs  histogram.rs  lib.rs  optical_balance.rs  path_collision.rs  path_geometry.rs  path_outline.rs  path_tangent_quality.rs  report.rs  scalar.rs  small_legibility.rs  value_zones.rs  vector_mark.rs  vector_report.rs
zenith-perception/tests/: small_legibility.rs
zenith-producers/: Cargo.toml
zenith-producers/src/: error.rs  lib.rs  model.rs  svg_native.rs
zenith-raster/: Cargo.toml
zenith-raster/src/: adjustment.rs  compositor.rs  lib.rs  surface.rs  transfer.rs
zenith-render/: Cargo.toml
zenith-render/src/: lib.rs  svg_style.rs  tiny_skia.rs
zenith-render/src/pdf/: content.rs  document.rs  font.rs  geometry.rs  glyph.rs  mod.rs  raster_embed.rs  svg.rs  tests.rs
zenith-render/src/tiny_skia/: backend.rs  commands.rs  filter.rs  mod.rs  paths.rs  shadow.rs  tests.rs
zenith-render/tests/: render_clip_transform.rs  render_effects.rs  render_gradients.rs  render_image.rs  render_shapes.rs  render_text.rs
zenith-render/tests/common/: mod.rs
zenith-tx/: Cargo.toml
zenith-tx/src/: engine.rs  lib.rs  merge.rs  op.rs  schema.rs
zenith-tx/src/engine/: asset.rs  dispatch.rs  fill_rule.rs  flags.rs  geometry.rs  mod.rs  path.rs  path_boolean.rs  path_handle.rs  path_snap.rs  path_symmetry.rs  pattern.rs  recipe.rs  structure.rs  style.rs  tests.rs  text_outline.rs  token.rs  tree.rs
zenith-tx/src/op/: ops.rs
zenith-tx/src/schema/: examples.rs  fields.rs  names.rs  summaries.rs  tests.rs
zenith-tx/tests/: asset_ops.rs  fill_rule_ops.rs  path_ops.rs  pattern_ops.rs  recipe_ops.rs  set_ops.rs  style_prop_ops.rs  text_edit_ops.rs  text_outline.rs  token_ops.rs  transaction.rs  unknown_node_ops.rs
zenith-tx/tests/common/: mod.rs
zenith-tx/tests/path_ops/: boolean.rs  insertion.rs  projection_insertion.rs  snap.rs
zenith-tx/tests/set_ops/: visibility.rs
zenith-zpx/: Cargo.toml
zenith-zpx/src/: error.rs  lib.rs  manifest.rs  model.rs
zenith-zpx/src/bake/: mod.rs  render.rs
zenith-zpx/src/paint/: mod.rs  render.rs
(+258 files in other folders)
