[workspace]
resolver = "3"
members = [
    "zenith-core",
    "zenith-layout",
    "zenith-scene",
    "zenith-render",
    "zenith-tx",
    "zenith-cli",
    "zenith-session",
]

[workspace.package]
version = "0.0.1"
edition = "2024"
rust-version = "1.85"
license = "Apache-2.0"
repository = "https://github.com/zenitheditor/zenith"
homepage = "https://github.com/zenitheditor/zenith"
description = "Zenith — a deterministic, agent-native design-document format and engine."
readme = "README.md"
keywords = ["design", "deterministic", "kdl", "rendering", "agent"]
categories = ["rendering", "command-line-utilities", "visualization"]
publish = true

# Internal crates are referenced through the workspace so a single version is
# stamped at release time (see .github/workflows/release.yml). The `version`
# requirement is what ships to crates.io; the `path` is used for local builds.
[workspace.dependencies]
zenith-core = { version = "0", path = "zenith-core" }
zenith-layout = { version = "0", path = "zenith-layout" }
zenith-scene = { version = "0", path = "zenith-scene" }
zenith-render = { version = "0", path = "zenith-render" }
zenith-tx = { version = "0", path = "zenith-tx" }
zenith-session = { version = "0", path = "zenith-session" }

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
