[package]
name = "zenith-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
zenith-core = { path = "../zenith-core" }
zenith-layout = { path = "../zenith-layout" }
zenith-tx = { path = "../zenith-tx" }
zenith-scene = { path = "../zenith-scene" }
zenith-render = { path = "../zenith-render" }
zenith-session = { path = "../zenith-session" }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
csv = "1"
imagesize = "0.12"

[dev-dependencies]
tempfile = "3"
tiny-skia = "0.11"

[lints]
workspace = true
