[package]
# Published to crates.io as `zenith-tool` (the plain `zenith`/`zenith-cli`
# names are already taken by unrelated crates). The installed binary is still
# `zenith`; the crate directory stays `zenith-cli`.
name = "zenith-tool"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
publish.workspace = true
readme.workspace = true
description = "The Zenith command-line interface (the `zenith` binary) for the design-document toolchain."

# The package publishes as `zenith-tool`, but the library target keeps the
# `zenith_cli` name so `main.rs` and the integration tests import it unchanged.
[lib]
name = "zenith_cli"
path = "src/lib.rs"

[[bin]]
name = "zenith"
path = "src/main.rs"

[dependencies]
zenith-core = { workspace = true }
zenith-layout = { workspace = true }
zenith-tx = { workspace = true }
zenith-scene = { workspace = true }
zenith-render = { workspace = true }
zenith-session = { workspace = true }
zenith-perception = { workspace = true }
zenith-producers = { workspace = true }
zenith-zpx = { workspace = true }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
csv = "1"
imagesize = "0.12"
# Optional native Streamable-HTTP transport for `zenith mcp --http`. `tiny_http`
# is pure-Rust and synchronous (default features only — the `ssl-*` features
# pull C; they stay off), so the C-free, dependency-light invariant holds and
# the default build is unaffected.
tiny_http = { version = "0.12", optional = true }

[features]
default = []
# Enable the in-binary HTTP transport (otherwise `--http` reports it was built out).
http = ["dep:tiny_http"]

[dev-dependencies]
tempfile = "3"
tiny-skia = "0.11"
# Used only by the icon render-equivalence test to rasterize the SOURCE SVG the
# same way the render backend does (resvg re-exports usvg). Already in the lock
# via zenith-render; pure-Rust, so the C-free invariant holds.
resvg = "0.36"

[lints]
workspace = true
