[package]
name = "zenith-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
publish.workspace = true
readme.workspace = true
description = "Zenith core: KDL parser adapter, semantic AST, canonical formatter, tokens, validation, and diagnostics."

[dependencies]
kdl = "6.7.1"
oxidoc-highlight = "0.1.1"
serde = { version = "1", features = ["derive"] }
# Pure-Rust, C-free font parser. Already present in Cargo.lock transitively via
# rustybuzz (zenith-layout); declaring it here as a direct dependency introduces
# NO new crate to the graph. Used to read family/weight/style from local/system
# font files during the local-font scan.
ttf-parser = "0.25"

[lints]
workspace = true
