[package]
name = "zenith-render"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
zenith-core = { path = "../zenith-core" }
zenith-scene = { path = "../zenith-scene" }
jpeg-decoder = "0.3"
miniz_oxide = "0.8"
pdf-writer = "0.14"
tiny-skia = "0.11"
ttf-parser = "0.25"
resvg = "0.36"

[dev-dependencies]
zenith-layout = { path = "../zenith-layout" }
tiny-skia = "0.11"

[lints]
workspace = true
