[package]
name = "zenith-render"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
publish.workspace = true
readme.workspace = true
description = "Zenith CPU PNG (tiny-skia) and vector PDF rendering backends."

[dependencies]
zenith-core = { workspace = true }
zenith-raster = { workspace = true }
zenith-scene = { workspace = true }
jpeg-decoder = "0.3"
miniz_oxide = "0.8"
pdf-writer = "0.14"
subsetter = "0.2"
tiny-skia = "0.11"
ttf-parser = "0.25"
resvg = "0.36"

[dev-dependencies]
zenith-layout = { workspace = true }
tiny-skia = "0.11"

[lints]
workspace = true
