[package]
name = "zenith-tx"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
publish.workspace = true
readme.workspace = true
description = "Zenith transaction op set, apply/dry-run engine, diffs, and audit records."

[dependencies]
zenith-core = { workspace = true }
zenith-geometry = { workspace = true }
zenith-scene = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[lints]
workspace = true
